# uv-practice

./: pyproject.toml
src/project01/: __init__.py  hello.py
src/project01/karachi/lahore/: myfile.py
