[project]
name = "project01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
piaic = "project01:main"
ali = "project01.karachi.lahore.myfile:greeting"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
